<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.fanatic_coder.mynotepad.MainActivity">
<!-- Buttons displayed in bottom app bar. -->

    <!-- Search button for searching notes. -->
    <item
        android:id="@+id/search_button"
        android:orderInCategory="100"
        android:title="@string/search_button"
        android:icon="@drawable/search_icon"
        android:onClick="onSearchButtonClick"
        android:contentDescription="@string/content_description_search"
        app:showAsAction="always" />

    <!-- Select notes button for selecting notes and deleting them. -->
    <item
        android:id="@+id/select_notes_button"
        android:orderInCategory="200"
        android:title="@string/check_notes_button"
        android:icon="@drawable/check_notes_icon"
        android:onClick="onSelectNotesButtonClick"
        android:contentDescription="@string/content_description_check_notes"
        app:showAsAction="ifRoom" />

</menu>
